@@ -634,9 +634,10 @@ def install_products(app):
                         folder_permissions, raise_exc=debug_mode)
 
     # Delayed install of packages-as-products
-    for module, init_func in Products._packages_to_initialize:
+    for module, init_func in getattr(Products, '_packages_to_initialize', []):
         install_package(app, module, init_func, raise_exc=debug_mode)
-    Products._packages_to_initialize = []
+    if hasattr(Products, '_packages_to_initialize'):
+        del Products._packages_to_initialize
 
     Products.meta_types=Products.meta_types+tuple(meta_types)
     InitializeClass(Folder.Folder)
