@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #2358: backported fix making 'Products' package a real
+        "namespace package" from the trunk.
+
       - Collector #2287: form ':record' objects did not implement enough of
         the mapping interface.
 
